--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
     font-family: "Siemreap", sans-serif;
 }
 .moul-font{
-    font-family: "Moul", sans-serif;
+    font-family: 'Moul', sans-serif;
 }
 
 /* -----------------------Hero style------------ */
