--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@
 }
 /* ----------top destination style */
 .top-destination {
-  background-image: url(/images/map.jpg);
+  background-image: url("/images/map.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
